# VibeML

./: .gitignore  pyproject.toml
src/VibeML/data_processing/: pipeline.py  process_registry.py  processor.py
src/VibeML/data_processing/processes/: __init__.py  append_na_mask.py  base_process.py  cat_group.py  drop_col.py  label_encode.py  median_impute.py  mode_impute.py  num_bin.py  one_hot_encode.py  ordinal_encode.py  outliers_process.py  target_encode.py
src/VibeML/exploratory_data_analysis/: __init__.py  base_plot.py
src/VibeML/exploratory_data_analysis/bivariate_eda/: bivariate_analyzer.py  bivariate_registry.py
src/VibeML/exploratory_data_analysis/bivariate_eda/analysis/: __init__.py  box_plot.py  heat_map.py  histogram.py  scatter_plot.py
src/VibeML/exploratory_data_analysis/descriptive_eda/: descriptive_analyzer.py  descriptive_registry.py
src/VibeML/exploratory_data_analysis/descriptive_eda/analysis/: __init__.py  missing.py
src/VibeML/exploratory_data_analysis/univariate_eda/: univariate_analyzer.py  univariate_registry.py
src/VibeML/exploratory_data_analysis/univariate_eda/analysis/: __init__.py  box_plot.py  count_plot.py  histogram.py  outliers_plot.py
